Fix JUMP TO

--- a/docs/scss/docs/Layout.scss
+++ b/docs/scss/docs/Layout.scss
@@ -3,14 +3,14 @@ $sidebar-width: 250px;
 .Layout {
     background-color: $gray;
 
-    &-container,
     &-navigationContainer,
     &-content {
-        height: 100%;
+        min-height: 100%;
     }
 
     &-container {
-        padding-top: $nav-height;
+        min-height: calc(100% - #{$nav-height});
+        margin-top: 60px;
     }
 
     &-navigationContainer {
